package br.com.arturbarth.desfsia251;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class Desfsia251Application {

	public static void main(String[] args) {
		SpringApplication.run(Desfsia251Application.class, args);
	}

}
